--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,10 +4,15 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  background: linear-gradient(0deg,rgba(0, 0, 0, 0.8)), url(/images/cusco.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
 }
 
 a {
-  color: inherit;
+  color: #fff;
   text-decoration: none;
 }
 
