--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
-  background: linear-gradient(0deg,rgba(0, 0, 0, 0.8)), url(/images/cusco.jpg);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8)), url(/images/cusco.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  color: #fff;
+  /* color: #fff; */
 }
 
 a {
@@ -18,4 +21,25 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.btn {
+  @apply w-fit rounded-full py-3 px-5 uppercase  text-lg font-bold cursor-pointer tracking-wider;
+}
+.btn-primary {
+  @apply bg-yellowQ text-black hover:bg-white hover:text-black;
+}
+.btn-secondary {
+  @apply bg-black text-white hover:bg-white hover:text-black;
+}
+.btn-dark {
+  @apply bg-black text-white hover:bg-white hover:text-black;
+}
+
+.title {
+  @apply font-bold;
+}
+
+.yellowText {
+  @apply text-yellowQ;
 }
