--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,13 +5,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8)), url(/images/cusco.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* color: #fff; */
+  font-family: 'isidora', sans-serif;
 }
 
 a {
@@ -19,9 +13,13 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+h1,
+h2,
+h3 {
+  font-family: 'eveleth', sans-serif;
 }
+
+/* Global styles fot the site ! */
 
 .btn {
   @apply w-fit rounded-full py-3 px-5 uppercase  text-lg font-bold cursor-pointer tracking-wider;
