--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,40 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: 'isidora', sans-serif;
-}
 
 a {
   /* color: #fff; */
   text-decoration: none;
 }
 
-h1,
-h2,
-h3 {
-  font-family: 'eveleth', sans-serif;
+@layer base {
+  html {
+    font-family: 'isidora', system-ui, sans-serif;
+  }
+  h1,
+  h2,
+  h3 {
+    font-family: 'eveleth', sans-serif;
+  }
 }
 
-/* Global styles fot the site ! */
+/* Global styles for the site ! */
 
 .btn {
-  @apply w-fit rounded-full py-3 px-5 uppercase  text-lg font-bold cursor-pointer tracking-wider;
+  @apply w-fit rounded-full py-3 px-5 uppercase font-bold cursor-pointer tracking-wider;
 }
 .btn-primary {
-  @apply bg-yellowQ text-black hover:bg-white hover:text-black;
+  @apply bg-yellowQ text-black hover:bg-yellow-300 hover:text-black;
   width: fit-content;
-  padding: 10px;
   font-weight: bolder;
   border-radius: 10px;
-}
-.btn-primary:hover {
   transition: 0.2s ease;
-  transform: scale(1.05);
-  border: 1px solid black;
 }
 
 .btn-secondary {
@@ -42,6 +36,13 @@ h3 {
 }
 .btn-dark {
   @apply bg-black text-white hover:bg-white hover:text-black;
+}
+
+.btn-outline-primary {
+  @apply rounded-lg border-yellow-300 hover:border-yellowQ;
+  width: fit-content;
+  border: 1px solid;
+  transition: 0.2s ease;
 }
 
 .title {
