--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,7 @@ a:hover {
 @layer base {
     html {
         font-family: 'isidora', system-ui, sans-serif;
+        box-sizing: border-box;
     }
     h1,
     h2,
