--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'Isidora';
+    src: url('/fonts/Isidora-Alt-Bold.otf') format('opentype');
+    font-weight: bold;
+    font-style: bold;
+}
 a {
     /* color: #fff; */
     text-decoration: none;
