--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,17 +9,8 @@
     font-style: bold;
 }
 a {
-    /* color: #fff; */
     text-decoration: none;
-    border-bottom: 2px solid;
-    @apply border-transparent;
-    transition: 0.3s ease;
 }
-
-a:hover {
-    @apply border-yellowQ;
-}
-
 @layer base {
     html {
         font-family: 'isidora', system-ui, sans-serif;
@@ -33,6 +24,16 @@ a:hover {
 }
 
 /* Global styles for the site ! */
+.link {
+    text-decoration: none;
+    border-bottom: 2px solid;
+    @apply border-transparent;
+    transition: 0.3s ease;
+}
+
+.link:hover {
+    @apply border-yellowQ;
+}
 
 .btn {
     @apply w-fit rounded-full py-2 px-5 uppercase text-lg font-bold cursor-pointer tracking-wider box-content;
