--- a/components/atoms/ImageSlider/ImageSlider.module.scss
+++ b/components/atoms/ImageSlider/ImageSlider.module.scss
@@ -1,7 +1,6 @@
 .imageSlider {
     position: relative;
     width: 100%;
-    height: 500px;
     margin: 0 auto;
     overflow: hidden;
     display: flex;
@@ -28,11 +27,16 @@
 }
 
 .controls {
+    display: flex;
     position: absolute;
     bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    justify-content: space-between;
+    height: fit-content;
 }
 
 .controls button {
