--- a/components/atoms/ImageSlider/ImageSlider.module.scss
+++ b/components/atoms/ImageSlider/ImageSlider.module.scss
@@ -13,9 +13,11 @@
     left: 0;
     width: 100%;
     height: 100%;
+
     &:hover {
         cursor: grab;
     }
+
     transition: transform 0.2s ease-out;
 }
 
@@ -29,10 +31,7 @@
 .controls {
     display: flex;
     position: absolute;
-    bottom: 10px;
-    left: 0;
-    right: 0;
-    top: 50%;
+    inset: 50% 0 10px;
     transform: translateY(-50%);
     width: 100%;
     justify-content: space-between;
@@ -41,17 +40,18 @@
 
 .controls button {
     background-color: transparent;
-    color: white;
+    color: #fff;
     border: none;
     padding: 10px;
     font-size: 1.5rem;
     cursor: pointer;
 }
 
+.controls button + button {
+    margin-left: 10px;
+}
+
 .controls button:focus {
     outline: none;
 }
 
-.controls button + button {
-    margin-left: 10px;
-}
