--- a/components/molecules/signUpForm/index.module.scss
+++ b/components/molecules/signUpForm/index.module.scss
@@ -6,28 +6,8 @@
     list-style-type: none;
     position: relative;
     text-transform: uppercase;
-    li {
-        width: 33.3%;
-        position: relative;
-    }
-    li:before {
-        background-color: #f2be12;
-        border-radius: 50%;
-        color: #000;
-        counter-increment: step-a;
-        content: counter(step-a);
-        display: block;
-        font-size: 2.5rem;
-        line-height: 20px;
-        margin: 0 auto 5px auto;
-        padding: 10px;
-        text-align: center;
-        width: fit-content;
-    }
-    li:first-child:after {
-        content: none;
-    }
-    li:after {
+    
+    li::after {
         content: '';
         width: 100%;
         height: 2px;
@@ -37,4 +17,30 @@
         top: 9px;
         z-index: -1;
     }
+
+    li {
+        width: 33.3%;
+        position: relative;
+    }
+    
+
+    li::before {
+        background-color: #f2be12;
+        border-radius: 50%;
+        color: #000;
+        counter-increment: step-a;
+        content: counter(step-a);
+        display: block;
+        font-size: 2.5rem;
+        line-height: 20px;
+        margin: 0 auto 5px;
+        padding: 10px;
+        text-align: center;
+        width: fit-content;
+    }
+
+    li:first-child::after {
+        content: none;
+    }
+
 }
