--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,20 +3,20 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'Isidora';
+    font-family: Isidora;
     src: url('/fonts/Isidora-Alt-Bold.otf') format('opentype');
     font-weight: bold;
     font-style: bold;
 }
 @font-face {
-    font-family: 'Isidora';
+    font-family: Isidora;
     src: url('/fonts/Isidora-Medium.otf') format('opentype');
     font-weight: medium;
     font-style: medium;
 }
 
 @font-face {
-    font-family: 'Isidora';
+    font-family: Isidora;
     src: url('/fonts/Isidora-Semi-Bold.otf') format('opentype');
     font-weight: 600;
     font-style: 600;
@@ -27,29 +27,36 @@ a {
 }
 @layer base {
     html {
-        font-family: 'isidora', system-ui, sans-serif;
+        font-family: isidora, system-ui, sans-serif;
         box-sizing: border-box;
     }
+
     h1,
     h2,
     h3 {
-        font-family: 'eveleth', sans-serif;
+        font-family: eveleth, sans-serif;
     }
+    
     * {
         line-height: 1.5;
     }
 }
 
 *,
-*:before,
-*:after {
+
+*::before,
+
+*::after {
     box-sizing: inherit;
 }
+
 /* Global styles for the site ! */
+
 .link {
     text-decoration: none;
     border-bottom: 2px solid;
     @apply border-transparent;
+    
     transition: 0.3s ease;
 }
 
@@ -60,8 +67,10 @@ a {
 .btn {
     @apply w-fit rounded-full py-2 px-5 uppercase text-lg font-bold cursor-pointer tracking-wider box-content;
 }
+
 .btn-primary {
     @apply bg-yellowQ text-black;
+    
     width: fit-content;
     font-weight: bolder;
     border-radius: 10px;
@@ -69,19 +78,22 @@ a {
     transition: 0.2s ease;
     box-sizing: border-box;
 }
+
 .btn-primary:hover {
-    border-color: black;
+    border-color: #000;
 }
 
 .btn-secondary {
     @apply bg-black text-white hover:bg-white hover:text-black;
 }
+
 .btn-dark {
     @apply bg-black text-white hover:bg-white hover:text-black;
 }
 
 .btn-outline-primary {
     @apply rounded-lg border-yellow-300 hover:border-yellowQ;
+    
     width: fit-content;
     border: 1px solid;
     transition: 0.2s ease;
