--- a/components/molecules/SignUpForm/SummarySignUpForm/summaryform.module.scss
+++ b/components/molecules/SignUpForm/SummarySignUpForm/summaryform.module.scss
@@ -1,5 +1,19 @@
 .containerSummary{
-    p{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.headersContainer{
+    h5 {
         padding: 1rem 0;
+        min-height: 20px;
+    }
+}
+
+.answersContainer{
+    > div{
+        padding: 1rem 0;
+        min-height: 20px;
     }
 }
