Add(-): fix locale es

--- a/components/molecules/SignUpForm/StepsForm/stepsForm.module.scss
+++ b/components/molecules/SignUpForm/StepsForm/stepsForm.module.scss
@@ -1,6 +1,6 @@
 .circleStep {
     position: relative;
-    margin-right: 5rem;
+    margin-right: 40px;
 
     div &:not(:last-child)::after{
         content: '';
