Fix(-): fix style sorting buttons

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -139,6 +139,11 @@ table {
         font-weight: 600;
         padding: 1rem;
         white-space: nowrap;
+
+        button{
+            margin-left: 0.5rem;
+            vertical-align: middle;
+        }
     }
 
     tr{
