--- a/features/TableClients/tableClients.module.scss
+++ b/features/TableClients/tableClients.module.scss
@@ -35,4 +35,9 @@
         width: 250px!important;
         overflow: hidden;
     }
+
+    th:nth-child(7) {
+        width: 250px!important;
+        overflow: hidden;
+    }
 }
