--- a/layouts/dashboard.module.scss
+++ b/layouts/dashboard.module.scss
@@ -3,10 +3,19 @@
     display: flex;
     width: 100%;
     position: relative;
+    min-height: 100vh;
+
 
     .dashboard__body{
+        margin-left: 15rem;
         padding: 1rem;
         position: relative;
+        transition: .3s all;
         width: calc(100vw - 15rem);
+    }
+
+    .dashboard__bodyExpanded{
+        margin-left: 5rem;
+        width: calc(100vw - 5rem);
     }
 }
