Add(-): change token name

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -132,15 +132,20 @@ input {
 table {
     @apply bg-white text-gray-500;
     table-layout: fixed;
+
     th {
         @apply font-paragraph text-gray-800;
         font-weight: 600;
-        padding: 1rem;
+        padding: 0.7rem;
+        padding-left: 0;
         white-space: nowrap;
-
         button{
             margin-left: 0.5rem;
             vertical-align: middle;
+        }
+
+        &:first-child{
+            padding-left: 0.5rem;
         }
     }
 
@@ -149,7 +154,11 @@ table {
     }
 
     td{
-        padding: 0.5rem 1rem;
+        padding: 0.5rem;
+        padding-left: 0;
+        &:first-child{
+            padding-left: 0.5rem;
+        }
     }
 
     overflow-y: scroll;
