--- a/features/TableClients/tableClients.module.scss
+++ b/features/TableClients/tableClients.module.scss
@@ -1,43 +1,66 @@
+.containerTableUsers{
+    overflow-x: scroll;
+    width: 1630px
+}
 .tableUsers {
     font-size: 14px;
     border-spacing: 0;
     border-collapse: collapse;
     white-space: pre;
 
+    tr:focus-visible {
+        outline: none !important;
+        
+    }
+    
     th:nth-child(1), td:nth-child(1) {
-        width: 250px !important;
-        max-width: 250px;
+        width: 300px !important;
+        max-width: 300px;
         text-overflow: ellipsis;
         white-space: pre;
         overflow: hidden;
     }
     th:nth-child(2) {
         width: 300px!important;
+        min-width: 300px!important;;
         overflow: hidden;
     }
 
     th:nth-child(3) {
         width: 260px!important;
+        min-width: 260px !important;
         overflow: hidden;
     }
 
     th:nth-child(4) {
         width: 240px!important;
+        min-width: 240px!important;
         overflow: hidden;
     }
 
     th:nth-child(5) {
         width: 200px!important;
+        min-width: 200px!important;
         overflow: hidden;
     }
 
     th:nth-child(6) {
         width: 250px!important;
+        min-width: 250px!important;
         overflow: hidden;
     }
 
     th:nth-child(7) {
         width: 250px!important;
+        min-width: 250px!important;
         overflow: hidden;
+    }
+
+    input{
+        padding: 0.5rem;
+    }
+
+    .emailField{
+        @apply text-gray-400 text-xs
     }
 }
