--- a/features/TableClients/tableClients.module.scss
+++ b/features/TableClients/tableClients.module.scss
@@ -26,10 +26,12 @@
         overflow: hidden;
     }
 
-    th:nth-child(3) {
-        width: 260px!important;
-        min-width: 260px !important;
+    th:nth-child(3), td:nth-child(3) {
+        width: 300px!important;
+        min-width: 300px !important;
+        max-width: 300px !important;
         overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     th:nth-child(4) {
@@ -38,15 +40,18 @@
         overflow: hidden;
     }
 
-    th:nth-child(5) {
+    th:nth-child(5), td:nth-child(5) {
         width: 200px!important;
         min-width: 200px!important;
+        max-width: 400px!important;
         overflow: hidden;
+        text-overflow: ellipsis;
     }
 
-    th:nth-child(6) {
-        width: 250px!important;
-        min-width: 250px!important;
+    th:nth-child(6), td:nth-child(6) {
+        width: 90px!important;
+        min-width: 90px!important;
+        max-width: 90px!important;
         overflow: hidden;
     }
 
