Fix(-): dashboard client links

--- a/features/DashboardAside/DashboardAside.module.scss
+++ b/features/DashboardAside/DashboardAside.module.scss
@@ -2,7 +2,7 @@
     transition: all .2s;
     padding:  0.5rem 1rem;
     border-radius: 0.5rem;
-    width: 200px;
+    min-width: 200px;
 
     >svg {
         vertical-align: middle;
