--- a/components/organism/FiltersClients/filtersClients.module.scss
+++ b/components/organism/FiltersClients/filtersClients.module.scss
@@ -1,6 +1,8 @@
-.filterClients{
-    h3, h4, h5 {
-        @apply font-paragraph;
-        font-weight: normal !important;
-    }
+.filterClients {
+  h3,
+  h4,
+  h5 {
+    @apply font-paragraph;
+    font-weight: normal !important;
+  }
 }
