--- a/components/molecules/LoginForm/LoginForm.module.scss
+++ b/components/molecules/LoginForm/LoginForm.module.scss
@@ -1,22 +1,22 @@
 .showPasswordIcon {
-    height: 1.5rem;
-    width: 1.5rem;
-    padding: 4px;
-    position: absolute;
-    box-sizing:border-box;
-    right: 5px;
-    z-index: 10;
-    transition: all .2s;
-    border-radius: 50px;
-    @apply text-gray-600 bg-transparent;
- 
-    &:hover{
-        @apply bg-gray-200
-    }
-    &:disabled {
+  border-radius: 50px;
+  box-sizing: border-box;
+  height: 1.5rem;
+  padding: 4px;
+  position: absolute;
+  right: 5px;
+  transition: all 0.2s;
+  width: 1.5rem;
+  z-index: 10;
+  @apply text-gray-600 bg-transparent;
 
-        > svg {
-            display: none;
-        }
+  &:hover {
+    @apply bg-gray-200;
+  }
+
+  &:disabled {
+    > svg {
+      display: none;
     }
+  }
 }
