--- a/components/molecules/SignUpForm/signUp.module.scss
+++ b/components/molecules/SignUpForm/signUp.module.scss
@@ -1,25 +1,25 @@
 .formSignUp {
-    input{
-        border: none;
-        border-radius: 0%;
-        border-bottom: 1px solid #b9b9b9;
-        padding: 0;
-        padding-bottom: 5px;
-        padding-top: 0.5rem;
-        color: #000;
+  input {
+    border: none;
+    border-bottom: 1px solid #b9b9b9;
+    border-radius: 0%;
+    color: #000;
+    padding: 0;
+    padding-bottom: 5px;
+    padding-top: 0.5rem;
 
-        &:focus{
-            outline: none;
-        }
+    &:focus {
+      outline: none;
     }
+  }
 
-    h2{
-        @apply font-paragraph text-lg;
-        font-weight: bold;
-        color: #000 !important;
-    }
+  h2 {
+    @apply font-paragraph text-lg;
+    color: #000 !important;
+    font-weight: bold;
+  }
 
-    .errorLabel{
-        @apply text-red-500 text-sm
-    }
+  .errorLabel {
+    @apply text-red-500 text-sm;
+  }
 }
