--- a/features/SingleService/editSingleService.module.scss
+++ b/features/SingleService/editSingleService.module.scss
@@ -1,5 +1,5 @@
-.formEditService{
-    label{
-        @apply text-gray-600
-    }
+.formEditService {
+  label {
+    @apply text-gray-600;
+  }
 }
