--- a/features/TableClients/tableClients.module.scss
+++ b/features/TableClients/tableClients.module.scss
@@ -1,71 +1,76 @@
-.containerTableUsers{
-    overflow-x: scroll;
-    width: 1630px
+.containerTableUsers {
+  overflow-x: scroll;
+  width: 1630px;
 }
+
 .tableUsers {
-    font-size: 14px;
-    border-spacing: 0;
-    border-collapse: collapse;
+  border-collapse: collapse;
+  border-spacing: 0;
+  font-size: 14px;
+  white-space: pre;
+
+  tr:focus-visible {
+    outline: none !important;
+  }
+
+  th:nth-child(1),
+  td:nth-child(1) {
+    max-width: 300px;
+    overflow: hidden;
+    text-overflow: ellipsis;
     white-space: pre;
+    width: 300px !important;
+  }
 
-    tr:focus-visible {
-        outline: none !important;
-        
-    }
-    
-    th:nth-child(1), td:nth-child(1) {
-        width: 300px !important;
-        max-width: 300px;
-        text-overflow: ellipsis;
-        white-space: pre;
-        overflow: hidden;
-    }
-    th:nth-child(2) {
-        width: 300px!important;
-        min-width: 300px!important;;
-        overflow: hidden;
-    }
+  th:nth-child(2) {
+    min-width: 300px !important;
+    overflow: hidden;
+    width: 300px !important;
+  }
 
-    th:nth-child(3), td:nth-child(3) {
-        width: 300px!important;
-        min-width: 300px !important;
-        max-width: 300px !important;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+  th:nth-child(3),
+  td:nth-child(3) {
+    max-width: 300px !important;
+    min-width: 300px !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 300px !important;
+  }
 
-    th:nth-child(4) {
-        width: 240px!important;
-        min-width: 240px!important;
-        overflow: hidden;
-    }
+  th:nth-child(4) {
+    min-width: 240px !important;
+    overflow: hidden;
+    width: 240px !important;
+  }
 
-    th:nth-child(5), td:nth-child(5) {
-        width: 200px!important;
-        min-width: 200px!important;
-        max-width: 400px!important;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+  th:nth-child(5),
+  td:nth-child(5) {
+    max-width: 400px !important;
+    min-width: 200px !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 200px !important;
+  }
 
-    th:nth-child(6), td:nth-child(6) {
-        width: 90px!important;
-        min-width: 90px!important;
-        max-width: 90px!important;
-        overflow: hidden;
-    }
+  th:nth-child(6),
+  td:nth-child(6) {
+    max-width: 90px !important;
+    min-width: 90px !important;
+    overflow: hidden;
+    width: 90px !important;
+  }
 
-    th:nth-child(7) {
-        width: 250px!important;
-        min-width: 250px!important;
-        overflow: hidden;
-    }
+  th:nth-child(7) {
+    min-width: 250px !important;
+    overflow: hidden;
+    width: 250px !important;
+  }
 
-    input{
-        padding: 0.5rem;
-    }
+  input {
+    padding: 0.5rem;
+  }
 
-    .emailField{
-        @apply text-gray-400 text-xs
-    }
+  .emailField {
+    @apply text-gray-400 text-xs;
+  }
 }
