--- a/layouts/dashboard.module.scss
+++ b/layouts/dashboard.module.scss
@@ -9,7 +9,7 @@ $aside-width: 20rem;
 
   .dashboard__body {
     margin-left: $aside-width;
-    padding: 1rem;
+    padding: 1rem 3rem;
     position: relative;
     transition: 0.3s all;
     width: calc(100vw - $aside-width);
