--- a/features/Customer/Summary/SummaryClient/summaryClient.module.scss
+++ b/features/Customer/Summary/SummaryClient/summaryClient.module.scss
@@ -1,5 +1,5 @@
 .cardSummary {
-  @apply shadow-lg bg-greenQ;
+  @apply bg-greenQ shadow-lg;
   border-radius: 10px;
   color: #fff;
   height: fit-content;
