--- a/features/SummaryAdmin/summaryAdmin.module.scss
+++ b/features/SummaryAdmin/summaryAdmin.module.scss
@@ -1,5 +1,5 @@
 .cardSummary {
-  @apply shadow-md text-black bg-white;
+  @apply bg-white text-black shadow-md;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
