--- a/components/molecules/LoginForm/LoginForm.module.scss
+++ b/components/molecules/LoginForm/LoginForm.module.scss
@@ -8,7 +8,7 @@
   transition: all 0.2s;
   width: 1.5rem;
   z-index: 10;
-  @apply text-gray-600 bg-transparent;
+  @apply bg-transparent text-gray-600;
 
   &:hover {
     @apply bg-gray-200;
