--- a/components/molecules/SignUpForm/SummarySignUpForm/summaryform.module.scss
+++ b/components/molecules/SignUpForm/SummarySignUpForm/summaryform.module.scss
@@ -24,7 +24,9 @@
 
 .registerButton {
   border: none;
-  transition: width 0.4s ease-in-out, color 0.8s ease-in-out;
+  transition:
+    width 0.4s ease-in-out,
+    color 0.8s ease-in-out;
   white-space: nowrap;
 }
 
