--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -63,7 +63,7 @@ a {
 }
 
 .btn {
-  @apply w-fit rounded-full py-2 px-5 uppercase text-lg font-bold cursor-pointer tracking-wider box-content;
+  @apply box-content w-fit cursor-pointer rounded-full px-5 py-2 text-lg font-bold uppercase tracking-wider;
 
   &:disabled {
     @apply cursor-not-allowed bg-gray-300;
@@ -118,6 +118,11 @@ input {
   padding: 0.7rem;
   width: 100%;
   @apply outline-yellowQ;
+}
+
+input:disabled {
+  @apply bg-gray-200 text-gray-600;
+  cursor: not-allowed;
 }
 
 .map-container {
